# DM501-compiler

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compileAndRunProgram.sh  runAllProgramsThroughCompiler.sh
Compiler/: mycompiler
Tests/: F_ShortCircuitAND.src  O_BinarySearchTree.src  O_MultiDimArray.src  check.py  checkdir.py  compile.sh  compiler  out  run.s  runAll.sh
asmsnippets/: abs.s  artTest.c  asd  base.s  booleaneval.md  complexAccess.s  conditionals.s  cplayground.c  cplayground.s  debugServer.sh  decl.sh  easyDev.sh  errors.s  functionPtr.c  functionPtr.s  gc.s  globalTest.c  globalTwo.s  hashmap  hashmap.c  hashmap.s  kimDevel.sh  out  out.debug  out.s  print.s  printComp.c  printNumber.s  printTest.s  recordAccess.s  run.s  symbols.s  testenv.s
build-files/: Compiler  Makefile  PrettyPrint  compiler  compiler.sh  prettyPrint.sh  run.s  runCompiler.sh  runCompilerNoTypes.sh  scan_parse.sh
kimtests/: O_ArrayComparisonsB.src  O_BinarySearchTree.src  O_FuncRedefinedInItself.src  O_Knapsack.src  O_MultiDimArray.src  check.py  compile.sh  compiler  out  p.s  run.s  runAll.sh
src/: CMakeLists.txt  Makefile  compiler  main.c  sandboxer.c  sandboxer.h
src/ASM_code_gen/: CMakeLists.txt  asm_code_gen.c  asm_code_gen.h  code_gen.c
src/abstract_asm_code_gen/: CMakeLists.txt  abstract_asm_tree.c  abstract_asm_tree.h
src/asm_code_gen/: CMakeLists.txt  asm_code_gen.c  asm_code_gen.h  consts.c  consts.h  sizes.c  sizes.h
src/ast/: CMakeLists.txt  Makefile  tree.c  tree.h
src/ast_to_ir/: CMakeLists.txt  abstract_asm_tree.c  abstract_asm_tree.h  intermediate_representation.c  intermediate_representation.h
src/constant_fold/: CMakeLists.txt  constant_fold.c  constant_fold.h
src/error/: CMakeLists.txt  Makefile  error.c  error.h
src/garbage_collector/: CMakeLists.txt  garbage_collector.c  garbage_collector.h
src/liveness/: CMakeLists.txt  liveness.c  liveness.h
src/peephole/: CMakeLists.txt  peephole.c  peephole.h
src/pretty_print/: CMakeLists.txt  Makefile  pretty.c  pretty.h
src/register_allocation/: CMakeLists.txt  graph_coloring.c  graph_coloring.h  liveness_analysis.c  liveness_analysis.h  register_allocator.c  register_allocator.h  simplify_loads.c  simplify_loads.h
src/scan_parse/: CMakeLists.txt  Makefile  parser.c  parser.h  parser.y  parser_extra.h  pretty.c  pretty.h  scan_parse.c  scan_parse.h  scanner.c  scanner.l
src/symbol/: CMakeLists.txt  Makefile  README  decorate_ast.c  decorate_ast.h  main.c  symbol.c  symbol.h  symbol_from_ast.c  symbol_from_ast.h
src/type_checker/: CMakeLists.txt  Makefile  type_checker.c  type_checker.h
src/utils/: CMakeLists.txt  Makefile  enum_to_string.c  enum_to_string.h  int_linked_list.c  int_linked_list.h  linked_list.c  linked_list.h  map.c  map.h  memory.c  memory.h  optional.c  optional.h  sortedset.c  sortedset.h  stack.c  stack.h
src/weeder/: CMakeLists.txt  Makefile  weeder.c  weeder.h
src/weeder/weeds/: weed_constants.c  weed_constants.h  weed_functions.c  weed_functions.h
tests/: CMakeLists.txt  Makefile  build.sh  main.c  queue.c  queue.h  test.c  test.h  tests
tests/symbol/: CMakeLists.txt  Makefile  main.c  symbol_tests.c  symbol_tests.h  tests
tests/utils/: CMakeLists.txt  Makefile  queue.c  queue.h  test.c  test.h
(+50 files in other folders)
